--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-next": "13.0.4",
     "macro-css": "^1.0.5",
     "next": "13.0.4",
+    "next-redux-wrapper": "^8.1.0",
     "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
